Fixing more styles, improving code readability.

--- a/content/assets/stylesheets/sass/styles.sass
+++ b/content/assets/stylesheets/sass/styles.sass
@@ -12,4 +12,4 @@ h1, h2, h3, h4, h5
   font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif !important
 
 pre
-  font-size: 13px
+  font-size: 13px !important
